@@ -42,7 +42,9 @@ $tranStrings = array(
 		'S_LINE','S_BOLD_LINE','S_DOT','S_DASHED_LINE','S_USE_ADVANCED_ICONS',
 		'S_WRONG_TYPE_OF_ARGUMENTS_PASSED_TO_FUNCTION', 'S_TWO_ELEMENTS_SHOULD_BE_SELECTED',
 		'S_DELETE_SELECTED_ELEMENTS_Q', 'S_PLEASE_SELECT_TWO_ELEMENTS','S_LINK','S_NO_LINKS', 'S_NEW_ELEMENT',
-		'S_SELECT','S_SET_TRIGGER',
+		'S_SELECT','S_SET_TRIGGER'
+	),
+	'class.cookie.js' => array('S_MAX_COOKIE_SIZE_REACHED'
 	)
 );
 
