@@ -1,5 +1,6 @@
 Changes for 1.8.3
 
+ - [ZBX-2407] fixed repeated message on cookie size limit (Aly)
  - [ZBX-2406] removed filter from plaintext history (Aly)
  - [ZBX-2263] fixed permission checks in bar reports (Aly)
  - [ZBX-2270] fixed item filtering (Aly)
